[package]
name = "radell_blog"
version = "0.1.0"
authors = ["Marcus Rådell <marcus@radell.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2"
actix-rt = "1"
serde = "1"
serde_json = "1"
futures = "0.3"